2007-11-12 Gary Burton <gary.burton@zen.co.uk>
	* src/ScratchPad.py: fixed a crash when building tooltip. Not enough
	place holders in format string

2007-11-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/_PersonView.py: translation: Edit object, not menu with action|_Edit
	* src/PageView.py: translation: Edit object, not menu with action|_Edit
	issue #1370

2007-11-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ViewManager.py: use import image

2007-11-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/images/gramps-import.png : import image
	* src/gramps_main.py: register import image
	* src/DbLoader.py: Use import not open in import dialog, issue #396

2007-11-11 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_WriteGedcom.py: fix #1364 s/SGLS/SLGS/
	Fixes 3.0 trunk. same issue exists in 2.2.x to be fixed next

2007-11-11 Jim Sack <jgsack@san.rr.com>
	* src/ArgHandler.py: remove leftovers from prior CLI crash (#1358)
	* src/test/gramps_cli_test.py: add test for this bug 
	This bug only affected CLI, and only showed after CLI crasvn 

2007-11-10 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/rel_nl.py: inlaw children are allowed
	* src/Relationship.py: inlaw children are allowed

2007-11-10 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_WriteGrdb.py: missing parent in import
	* src/GrampsDbUtils/test/_GrampsDbWRFactories_test.py: added unittest
	The _WriteGrdb problem wasn't encountered until now, because the
	import is buried in a function (of_GrampsDbWRFactories)  that doesn't 
	always get exercised. A unit test was added to test the calling module
	by verifying those imports within functions.
	(belated CL entry for r9320 change made 11-07)


2007-11-10 Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/IndivComplete.py: added support for printing non-primary,
	non-family events.

2007-11-10 Benny Malengier <benny.malengier@gramps-project.org>